--- a/hHYuanLing/src/main/res/layout/activity_biddetail.xml
+++ b/hHYuanLing/src/main/res/layout/activity_biddetail.xml
@@ -23,7 +23,7 @@
             android:padding="@dimen/padding_normal"
             android:text="江苏约93万招投标信息"
             android:textColor="#2C4000"
-            android:textSize="16sp" />
+            android:textSize="@dimen/gj_f" />
 
 
         <LinearLayout
@@ -40,7 +40,7 @@
                 android:layout_marginRight="@dimen/padding_normal"
                 android:text="王先生"
                 android:textColor="#458AD8"
-                android:textSize="12sp" />
+                android:textSize="@dimen/gj_d" />
 
             <TextView
                 android:id="@+id/tv_date"
@@ -49,7 +49,7 @@
                 android:layout_marginRight="@dimen/padding_normal"
                 android:text="2017-03-15"
                 android:textColor="@color/text_color_b"
-                android:textSize="12sp" />
+                android:textSize="@dimen/gj_d" />
 
             <TextView
                 android:id="@+id/tv_time"
@@ -58,7 +58,7 @@
                 android:layout_marginRight="@dimen/padding_normal"
                 android:text="17:38"
                 android:textColor="@color/text_color_b"
-                android:textSize="12sp" />
+                android:textSize="@dimen/gj_d" />
 
             <TextView
                 android:id="@+id/tv_tel"
@@ -66,7 +66,7 @@
                 android:layout_height="wrap_content"
                 android:text="联系电话"
                 android:textColor="#CD2626"
-                android:textSize="12sp" />
+                android:textSize="@dimen/gj_d" />
         </LinearLayout>
 
         <View
@@ -81,7 +81,7 @@
             android:padding="@dimen/padding_normal"
             android:text="江苏约93万招投标信息"
             android:textColor="@color/text_color_b"
-            android:textSize="12sp" />
+            android:textSize="@dimen/gj_d" />
 
         <View
             android:layout_width="wrap_content"
