--- a/hHYuanLing/src/main/res/layout/activity_seedlingdetail.xml
+++ b/hHYuanLing/src/main/res/layout/activity_seedlingdetail.xml
@@ -23,7 +23,7 @@
             android:padding="@dimen/padding_normal"
             android:text="江苏约93万招投标信息"
             android:textColor="#2C4000"
-            android:textSize="16sp" />
+            android:textSize="@dimen/gj_f" />
 
 
         <LinearLayout
@@ -40,7 +40,7 @@
                 android:layout_marginRight="@dimen/padding_normal"
                 android:text="王先生"
                 android:textColor="#458AD8"
-                android:textSize="12sp" />
+                android:textSize="@dimen/gj_d" />
 
             <TextView
                 android:id="@+id/tv_date"
@@ -49,7 +49,7 @@
                 android:layout_marginRight="@dimen/padding_normal"
                 android:text="2017-03-15"
                 android:textColor="@color/text_color_b"
-                android:textSize="12sp" />
+                android:textSize="@dimen/gj_d" />
 
             <TextView
                 android:id="@+id/tv_time"
@@ -58,7 +58,7 @@
                 android:layout_marginRight="@dimen/padding_normal"
                 android:text="14:21"
                 android:textColor="@color/text_color_b"
-                android:textSize="12sp" />
+                android:textSize="@dimen/gj_d" />
 
             <TextView
                 android:id="@+id/tv_tel"
@@ -66,54 +66,110 @@
                 android:layout_height="wrap_content"
                 android:text="联系电话"
                 android:textColor="#CD2626"
-                android:textSize="12sp" />
+                android:textSize="@dimen/gj_d" />
         </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dip"
+            android:background="@color/line" />
+
+        <TextView
+            android:id="@+id/tv_supplier"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/padding_normal"
+            android:text="供应商："
+            android:textColor="@color/text_color_b"
+            android:textSize="@dimen/gj_d" />
+
+        <TextView
+            android:id="@+id/tv_address"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/padding_normal"
+            android:text="供应商地址："
+            android:textColor="@color/text_color_b"
+            android:textSize="@dimen/gj_d" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:padding="@dimen/padding_normal">
-
-            <TextView
-                android:id="@+id/tv_supplier"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="@dimen/padding_normal"
-                android:text="供应商"
-                android:textColor="@color/text_color_b"
-                android:textSize="12sp" />
-
-            <TextView
-                android:id="@+id/tv_address"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="@dimen/padding_normal"
-                android:text="供应商地址"
-                android:textColor="@color/text_color_b"
-                android:textSize="12sp" />
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/tv_breed"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="@dimen/padding_normal"
-                android:text="品种"
+                android:padding="@dimen/padding_normal"
+                android:text="品种："
                 android:textColor="@color/text_color_b"
-                android:textSize="12sp" />
+                android:textSize="@dimen/gj_d" />
 
             <TextView
                 android:id="@+id/tv_sub"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="二级品种"
+                android:layout_marginLeft="@dimen/padding_normal"
+                android:padding="@dimen/padding_normal"
+                android:text="二级种类"
                 android:textColor="@color/text_color_b"
-                android:textSize="12sp" />
+                android:textSize="@dimen/gj_d" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="@dimen/padding_normal">
+
+            <TextView
+                android:id="@+id/tv_dbh"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="胸径："
+                android:textColor="@color/text_color_b"
+                android:textSize="@dimen/gj_d" />
+
+            <TextView
+                android:id="@+id/tv_pdt"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="蓬径："
+                android:textColor="@color/text_color_b"
+                android:textSize="@dimen/gj_d" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="@dimen/padding_normal">
+
+            <TextView
+                android:id="@+id/tv_height"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="高度："
+                android:textColor="@color/text_color_b"
+                android:textSize="@dimen/gj_d" />
+
+
+            <TextView
+                android:id="@+id/tv_num"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="数量："
+                android:textColor="@color/text_color_b"
+                android:textSize="@dimen/gj_d" />
         </LinearLayout>
 
         <View
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="1dip"
             android:background="@color/line" />
 
@@ -124,10 +180,10 @@
             android:padding="@dimen/padding_normal"
             android:text="江苏约93万招投标信息"
             android:textColor="@color/text_color_b"
-            android:textSize="12sp" />
+            android:textSize="@dimen/gj_d" />
 
         <View
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="1dip"
             android:background="@color/line" />
 
@@ -135,12 +191,12 @@
             android:id="@+id/gridView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="@dimen/activity_horizontal_margin"
+            android:layout_margin="@dimen/padding_big"
             android:listSelector="@android:color/transparent"
             android:numColumns="3"
             android:scrollbars="none"
             android:stretchMode="columnWidth"
-            android:verticalSpacing="@dimen/activity_horizontal_margin" />
+            android:verticalSpacing="@dimen/padding_big" />
 
     </LinearLayout>
 </ScrollView>
